WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55264
A WKView without a window will cause CG errors in the console
https://bugs.webkit.org/show_bug.cgi?id=55264
Summary
A WKView without a window will cause CG errors in the console
Anders Carlsson
Reported
2011-02-25 14:29:40 PST
A WKView without a window will cause CG errors in the console
Attachments
Patch
(1.60 KB, patch)
2011-02-25 14:30 PST
,
Anders Carlsson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-02-25 14:30:27 PST
Created
attachment 83878
[details]
Patch
Anders Carlsson
Comment 2
2011-02-25 14:36:08 PST
Committed
r79732
: <
http://trac.webkit.org/changeset/79732
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug