2011-02-25  Anders Carlsson  <andersca@apple.com>

Reviewed by Darin Adler.

        A WKView without a window will cause CG errors in the console
        https://bugs.webkit.org/show_bug.cgi?id=55264
        <rdar://problem/9044281>

        Check that the window has a valid window number before trying to get its graphics context.

        * UIProcess/API/mac/PageClientImpl.mm:
        (WebKit::PageClientImpl::containingWindowGraphicsContext):


Canonical link: https://commits.webkit.org/69650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79732 268f45cc-cd09-0410-ab3c-d52691b4dbfc